# Human

./: .gitignore  CHANGELOG.md  COMMAND_SETUP_SUMMARY.md  DEVELOPMENT.md  Dockerfile  EXTENSION_README.md  FEATURES.md  INSTALLATION.md  LICENSE  MANIFEST.in  METHODS_AND_BUILTINS.md  PROJECT_SUMMARY.md  PUBLISHING.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  SYNTAX.md  ast_nodes.py  compiler.py  human-language-configuration.json  human.tmLanguage.json  human.toml.sample  import_test.hm  interpreter.py  package.json  parser.py  pyproject.toml  requirements.txt  resize_icons.py  setup.cfg  setup.py  test.hm  test_feature.hm  test_features.hm  test_json.hm  test_json3.hm  test_json4.hm  test_print.hm  try_test.hm  (+2 more)
.github/workflows/: build_vsix_artifact.yml  ci.yml  compat.yml  pr_and_release_vsix.yml  pr_vsix.yml  publish-pypi.yml  publish.yml  release.yml  semantic-release.yml  smoke.yml
docs/: index.html  packaging-and-ci.md  robots.txt  sitemap.xml
examples/: ai_app.hm  conditionals.hm  fibonacci.hm  import_test.hm  lambda_comprehension_test.hm  loops.hm  multiplication.hm  mymodule.hm  numby.hm  numby_test.hm  prime_checker.hm  scipy_test.hm  slice_test.hm  string_and_list_methods.hm  syntax_highlight_test.hm  variables.hm  web_app.hm
examples/static/: hello.txt
human_language/: LICENSE  README.md  __init__.py  __main__.py  ast_nodes.py  cli.py  compiler.py  installer.py  interpreter.py  lexer.py  native_packaging.py  parser.py  pyinstaller_packaging.py  vm.py
human_language.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: build_native_release_asset.py  build_windows_installer.ps1  health_check.py  setup_venv.ps1  setup_venv.sh  sync_version.py  validate_import_policy.py
tests/: test_config.py  test_examples.py  test_vm.py
tools/: debug_compile.py  np_wrapper.py  scipy_helper.py
