[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "human-language"
version = "0.1.6"
description = "A custom programming language with plain English syntax"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "KielTech", email = "info@kieltech.com"}
]
keywords = ["language", "interpreter", "compiler", "programming"]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Homepage = "https://github.com/kieltech75-hue/Human"
Repository = "https://github.com/kieltech75-hue/Human"
Issues = "https://github.com/kieltech75-hue/Human/issues"

[project.scripts]
human = "human_language.cli:main"
