[metadata]
name = human-language
version = 0.1.6

author = KielTech
author_email = info@kieltech.com
description = A custom programming language with plain English syntax
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kieltech75-hue/Human
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Compilers

[options]
packages = find:
include_package_data = True
install_requires =
    pygls>=1.0.0
python_requires = >=3.8

[options.entry_points]
console_scripts =
    human = human_language.cli:main
    human-lsp = human_language.lsp_server:main
